--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,9 @@ a {
   text-decoration: none;
   color: inherit;
 }
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
